--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -28,7 +28,7 @@
       </p-fieldset>
     </div>
 
-    <div class="single-card">
+    <div class="single-card last-card">
       <p-fieldset legend="Scatter Plot" [toggleable]="true" [collapsed]="true"
                   [class]="'new-card process-tree-wrapper'">
         <plotly-chart></plotly-chart>
