--- a/celvis/src/app/plotly-chart/plotly-chart.component.scss
+++ b/celvis/src/app/plotly-chart/plotly-chart.component.scss
@@ -1,3 +1,44 @@
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+  animation: custom-progress-spinner-dash 1.5s ease-in-out infinite,
+  custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+  0% {
+    stroke: var(--color-brand-primary-hover);
+  }
+  50% {
+    stroke: var(--color-brand-primary);
+  }
+  100% {
+    stroke: var(--color-brand-primary-active)
+  }
+}
+
+@keyframes custom-progress-spinner-dash {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -35px;
+  }
+  100% {
+    stroke-dasharray: 89, 200;
+    stroke-dashoffset: -124px;
+  }
+}
+
+.spinner-div {
+  margin: 3rem 0;
+  opacity: .5;
+}
+
+.wrapper {
+  position: relative;
+}
+
 
 ::ng-deep .yAxisSelect {
   padding-left: 2rem;
@@ -5,4 +46,15 @@
 
 .yAxisPadding {
   width: 5rem;
+}
+
+.axis-selector {
+  margin: auto;
+  max-width: 600px;
+  display: grid;
+  grid-row-gap: 1.5rem;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  justify-items: center;
+
 }
