--- a/celvis/src/app/plotly-chart/plotly-chart.component.scss
+++ b/celvis/src/app/plotly-chart/plotly-chart.component.scss
@@ -1,6 +1,7 @@
 :host ::ng-deep .custom-spinner .p-progress-spinner-circle {
   animation: custom-progress-spinner-dash 1.5s ease-in-out infinite,
   custom-progress-spinner-color 6s ease-in-out infinite;
+  stroke-width: 2pt;
 }
 
 @keyframes custom-progress-spinner-color {
