--- a/celvis/src/app/main/main.component.html
+++ b/celvis/src/app/main/main.component.html
@@ -6,7 +6,7 @@
 
   <!--<h1>CelVis</h1> -->
   <div class="boxes">
-    <div class="double-card">
+    <div class="double-card pieplotbox">
       <p-fieldset legend="Case Distribution" [toggleable]="true" [collapsed]="true" [class]="'new-double-card'">
         <app-piechart></app-piechart>
       </p-fieldset>
