--- a/celvis/src/app/plotly-piechart/plotly-piechart.component.html
+++ b/celvis/src/app/plotly-piechart/plotly-piechart.component.html
@@ -1,1 +1,2 @@
+<h5 style="display: inline-block">Total Number of Variants:</h5> <h5 class="color">{{total_number_of_variants}}</h5>
 <div id="myDiv1"></div>
